# Qt_cake_game

./: CMakeLists.txt  TCP_client.h  TCP_server.h  core.h  gameroom.cpp  gameroom.h  gameroom.ui  joinscene.cpp  joinscene.h  joinscene.ui  mypushbottom.cpp  mypushbottom.h  online.cpp  online.h  online.ui  onlineplay.cpp  onlineplay.h  playscene.cpp  playscene.h  res.qrc  tasknamebox.cpp  tasknamebox.h  widget.cpp  widget.h  widget.ui
res/: background.jfif  create_room_b.jfif  hall_b.jfif  local_game_b.jfif
